Lib/AlternateWrapper/NaroOccCore/NaroOccCore/Occ/ProjLib/ProjLib.h

#ifndef ProjLib_H
#define ProjLib_H

#include "../../Export_Import.h"

extern "C" DECL_EXPORT void* ProjLib_Project10B48A70(
	void* Pl,
	void* P);
extern "C" DECL_EXPORT void* ProjLib_Project1626C982(
	void* Pl,
	void* L);
extern "C" DECL_EXPORT void* ProjLib_Project13B7CC27(
	void* Pl,
	void* C);
extern "C" DECL_EXPORT void* ProjLib_ProjectEB568F0D(
	void* Pl,
	void* E);
extern "C" DECL_EXPORT void* ProjLib_ProjectDE13DD50(
	void* Pl,
	void* P);
extern "C" DECL_EXPORT void* ProjLib_ProjectEAC29BEC(
	void* Pl,
	void* H);
extern "C" DECL_EXPORT void* ProjLib_ProjectFA59BDF6(
	void* Cy,
	void* P);
extern "C" DECL_EXPORT void* ProjLib_ProjectDE57BDFB(
	void* Cy,
	void* L);
extern "C" DECL_EXPORT void* ProjLib_ProjectED02D9F7(
	void* Cy,
	void* Ci);
extern "C" DECL_EXPORT void* ProjLib_ProjectF81943F5(
	void* Co,
	void* P);
extern "C" DECL_EXPORT void* ProjLib_Project80DF43EE(
	void* Co,
	void* L);
extern "C" DECL_EXPORT void* ProjLib_ProjectA92F9F7D(
	void* Co,
	void* Ci);
extern "C" DECL_EXPORT void* ProjLib_Project1377F951(
	void* Sp,
	void* P);
extern "C" DECL_EXPORT void* ProjLib_Project4CF82905(
	void* Sp,
	void* Ci);
extern "C" DECL_EXPORT void* ProjLib_ProjectA0BA3DF1(
	void* To,
	void* P);
extern "C" DECL_EXPORT void* ProjLib_ProjectB747273A(
	void* To,
	void* Ci);
extern "C" DECL_EXPORT void ProjLib_Dtor(void* instance);

#endif